--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Midterm exam</em><br /></h5>
+			      <h5><em>MIDTERM EXAM</em><br /></h5>
 			    </div>
 			  </div>
 
