Removed outdated language.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		    
 		    <p>This course can be used to satisfy core requirements for Systems for the M.S. and PhD degrees.</p>
 		    <p>Grades will be based on in-class participation, projects, and exams.<br />
-		      You must submit your reviews <b><a href="http://grad-systems.cs.umass.edu/">via the review submission site</a></b> <em>the night before each class</em>, by 9 p.m. <strong>Do not modify and re-submit your reviews: just submit once.</strong></p>
+		      You must submit your reviews <b><a href="http://grad-systems.cs.umass.edu/">via the review submission site</a></b> <em>before each class</em>. <strong>Do not modify and re-submit your reviews: just submit once.</strong></p>
 		    <p>See <a href="http://www.cs.berkeley.edu/~fox/paper_writing.html#rev">these notes by John Ousterhout</a> on writing reviews. Focus on the positive: these are classics for a reason!</p>
 		    <p>Your reviews must address the following points:</p>
 		    <ul>
