--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 			    </div>
 			    <div class="card-body">
 			      <h5><em>Security</em><br /></h5>
-			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/lampson73note.pdf">A Note on the Confinement Problem</a>, Lampson 1973 <em>(review)</em>
+			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/lampson73note.pdf">A Note on the Confinement Problem</a>, Lampson 1973 <em>(review)</em><br />
 			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/Reflections-on-Trusting-Trust.pdf">Reflections on Trusting Trust</a>, Thompson 1984 <em>(review)</em>
 			      Spectre/Meltdown paper (TBD), <em>(read)</em>
 			    </div>
@@ -280,7 +280,7 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Privacy &amp; Cryptography</em><br /></h5>
+			      <h5><em>class cancelled (snow day)</em><br /></h5>
 			    </div>
 			  </div>
 
@@ -291,7 +291,9 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Fault Tolerance (Hardware)</em><br /></h5>
+			      <h5><em>Privacy &amp; Cryptography</em><br /></h5>
+			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/Rsapaper.pdf">A Method for Obtaining Digital Signatures and Public Key Cryptosystems</a>, RSA 1978<em>(review)</em><br />
+			      <a href="https://svn.torproject.org/svn/projects/design-paper/tor-design.pdf">Tor: The Second-Generation Onion Router</a>, Dingledine et al., 2004<em>(read)</em><br />
 			    </div>
 			  </div>
 
@@ -302,11 +304,11 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Fault Tolerance (Software)</em><br /></h5>
+			      <h5><em>Fault Tolerance</em><br /></h5>
 			    </div>
 			  </div>
 
-			  
+		  
 			  <div class="card mb-12">
 			    <div class="card-header">
 			      <h4 id="users" class="my-0 font-weight-normal">
