--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
 			    </div>
 			    <div class="card-body">
 			      <h5><em>Fault Tolerance</em><br /></h5>
+			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Reliability/RAID-patterson.pdf">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>, Patterson, Gibson &amp; Katz, 1988<em>(review)</em><br />
+			      <a href="http://www.hpl.hp.com/techreports/tandem/TR-85.7.pdf">Why Do Computers Stop and What Can Be Done About It?</a>, Gray 1985<em>(review)</em><br />
 			    </div>
 			  </div>
 
