--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 			    <div class="card-body">
 			      <h5><em>Security</em><br /></h5>
 			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/lampson73note.pdf">A Note on the Confinement Problem</a>, Lampson 1973 <em>(review)</em><br />
-			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/Reflections-on-Trusting-Trust.pdf">Reflections on Trusting Trust</a>, Thompson 1984 <em>(review)</em>
-			      Spectre/Meltdown paper (TBD), <em>(read)</em>
+			      <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Sec/Reflections-on-Trusting-Trust.pdf">Reflections on Trusting Trust</a>, Thompson 1984 <em>(review)</em><br />
+			      <a href="https://spectreattack.com">Spectre</a>/<a href="https://meltdownattack.com/">Meltdown</a> papers, <em>(read)</em>
 			    </div>
 			  </div>
 			  
@@ -339,7 +339,9 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Concurrent / Queueing Systems</em><br /></h5>
+			      <!-- <h5><em>Concurrent / Queueing Systems</em><br /></h5> -->
+			      <h5><em>Fault Tolerance</em><br /></h5>
+			      <em>guest lecture: <a href="http://blogs.ubc.ca/karthik/">Karthik Pattabiraman</a></em>
 			    </div>
 			  </div>
 
@@ -350,7 +352,10 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Performance Analysis</em><br /></h5>
+			      <!-- <h5><em>Performance Analysis</em><br /></h5> -->
+			      <h5><em>Security &amp; Privacy</em></h5>
+			      Secure Outsourced Databases: Past, Present, and Future,
+			      <a href="http://people.cs.georgetown.edu/~adam/">Adam O'Neill</a> (GaTech), <b>room 151</b>
 			    </div>
 			  </div>
 			  
