--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 			    <div class="card-body">
 			      <!-- <h5><em>Concurrent / Queueing Systems</em><br /></h5> -->
 			      <h5><em>Fault Tolerance</em><br /></h5>
-			      <em>guest lecture: <a href="http://blogs.ubc.ca/karthik/">Karthik Pattabiraman</a></em>
+			      <em>guest lecture: <a href="http://blogs.ubc.ca/karthik/">Karthik Pattabiraman</a></em> (<a href="presentations/karthik-pattabiraman-2018-04.pdf">presentation</a>)
 			    </div>
 			  </div>
 
