--- a/index.html
+++ b/index.html
@@ -368,6 +368,8 @@
 			    <div class="card-body">
 			      <h5><em>Distributed Systems Principles</em><br /></h5>
 			      Byzantine Generals, RAFT<br />
+			      <a href="https://www.usenix.org/system/files/conference/atc14/atc14-paper-ongaro.pdf">In Search of an Understandable Consensus Algorithm</a>, Ongaro &amp; Ousterhout, 2014<em>(review)</em><br />
+			      <a href="https://people.eecs.berkeley.edu/~luca/cs174/byzantine.pdf">The Byzantine Generals Problem</a>, Lamport, Shostak &amp Pease, 1982<em>(read, skim proofs)</em><br />
 			    </div>
 			  </div>
 
