--- a/index.html
+++ b/index.html
@@ -367,7 +367,9 @@
 			    </div>
 			    <div class="card-body">
 			      <h5><em>Distributed Systems Principles</em><br /></h5>
-			      Byzantine Generals, RAFT<br />
+			      Bringing Distributed Data Systems to End Users,
+			      <a href="http://heather.miller.am/">Heather Miller</a> (Northeastern), <b>room 151</b>
+			      <br />
 			      <a href="https://www.usenix.org/system/files/conference/atc14/atc14-paper-ongaro.pdf">In Search of an Understandable Consensus Algorithm</a>, Ongaro &amp; Ousterhout, 2014<em>(review)</em><br />
 			      <a href="https://people.eecs.berkeley.edu/~luca/cs174/byzantine.pdf">The Byzantine Generals Problem</a>, Lamport, Shostak &amp Pease, 1982<em>(read, skim proofs)</em><br />
 			    </div>
@@ -380,7 +382,9 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Databases</em><br /></h5>
+			      <h5><em>Distributed Systems Principles</em><br /></h5>
+			      Byzantine Generals, RAFT<br />
+<!--			      <h5><em>Databases</em><br /></h5> -->
 			    </div>
 			  </div>
 
