--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>TBD</em><br /></h5>
+			      <h5><em>no papers</em><br /></h5>
 			    </div>
 			  </div>
 
@@ -407,6 +407,10 @@
 			    </div>
 			    <div class="card-body">
 			      <h5><em>Distributed and Concurrent Systems</em><br /></h5>
+			      <br />
+			      <a href="https://lamport.azurewebsites.net/pubs/time-clocks.pdf">Time, Clocks, and the Ordering of Events in a Distributed System</a>, Lamport, 1978<em>(review)</em><br />
+			      <a href="https://users.soe.ucsc.edu/~cormac/papers/pldi09.pdf">FastTrack: Efﬁcient and Precise Dynamic Race Detection</a>, Flanagan and Freund, 2009<em>(read)</em><br />
+			    </div>
 			    </div>
 			  </div>
 
