--- a/index.html
+++ b/index.html
@@ -421,7 +421,10 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Static &amp; Dynamic Analysis</em><br /></h5>
+			      <h5><em>Cryptocurrencies</em><br /></h5>
+			      <a href="https://bitcoin.org/bitcoin.pdf">Bitcoin: A Peer-to-Peer Electronic Cash System</a>, Nakamoto, 2008<em>(review)</em><br />
+			      <a href="https://d28rh4a8wq0iu5.cloudfront.net/bitcointech/readings/princeton_bitcoin_book.pdf">Bitcoin and Cryptocurrency Technologies</a>, Narayanan et al., 2016<em>(reference)</em><br />
+
 			    </div>
 			  </div>
 
@@ -443,7 +446,7 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>TBD</em><br /></h5>
+			      <h5><em>Static &amp; Dynamic Analysis</em><br /></h5>
 			    </div>
 			  </div>
 			  
