--- a/index.html
+++ b/index.html
@@ -435,7 +435,9 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>"Modern" Programming Languages</em><br /></h5>
+			      <h5><em>Static &amp; Dynamic Analysis</em><br /></h5>
+			      <a href="https://cacm.acm.org/magazines/2010/2/69354-a-few-billion-lines-of-code-later/fulltext">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Bessey et al. (review)<br />
+			      <a href="https://www.cs.columbia.edu/~junfeng/09fa-e6998/papers/valgrind.pdf">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>, Nethercote &amp; Seward (review)
 			    </div>
 			  </div>
 			  
@@ -446,7 +448,6 @@
 			      </h4>
 			    </div>
 			    <div class="card-body">
-			      <h5><em>Static &amp; Dynamic Analysis</em><br /></h5>
 			    </div>
 			  </div>
 			  
