--- a/index.html
+++ b/index.html
@@ -444,10 +444,14 @@
 			  <div class="card mb-12">
 			    <div class="card-header">
 			      <h4 id="users" class="my-0 font-weight-normal">
-				Testing
+				April 30
 			      </h4>
 			    </div>
 			    <div class="card-body">
+			      <h5><em>Testing</em><br /></h5>
+			      <a href="http://ftp.cs.wisc.edu/paradyn/technical_papers/fuzz.pdf">
+				An empirical study of the reliability of UNIX utilities</a>, Miller et al. (review)<br />
+			      <a href="https://web.eecs.umich.edu/~weimerw/2011-6610/reading/p213-godefroid.pdf">DART: Directed Automated Random Testing</a>, Godefroid et al. (review)<br />
 			    </div>
 			  </div>
 			  
