Updated with optional papers.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ Thursday, September 05
 Compilers
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/p243-hopper.pdf">The Education of a Computer</a>, Hopper<br/>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/FORTRAN-102663113.05.01.acc.pdf">The FORTRAN Automatic Coding System</a>, <br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/FORTRAN-102663113.05.01.acc.pdf">The FORTRAN Automatic Coding System</a>, Backus<br/>
+<font color="darkgreen"><a href="http://scholar.harvard.edu/files/mickens/files/thenightwatch.pdf">The Night Watch</a>, Mickens [skim]<br/></font>
 </div>
 </div>
 <div class="card mb-12">
