Updated format, added some more directions.

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@ Thursday, September 05
 <h5><em>
 Compilers
 </em></h5>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/p243-hopper.pdf">The Education of a Computer</a>, Hopper<br/>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/FORTRAN-102663113.05.01.acc.pdf">The FORTRAN Automatic Coding System</a>, Backus<br/>
-<font color="darkgreen"><a href="http://scholar.harvard.edu/files/mickens/files/thenightwatch.pdf">The Night Watch</a>, Mickens [skim]<br/></font>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/p243-hopper.pdf">The Education of a Computer</a>, Hopper [read]<br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/FORTRAN-102663113.05.01.acc.pdf">The FORTRAN Automatic Coding System</a>, Backus <font color="red">[review]</font><br/>
+<a href="http://scholar.harvard.edu/files/mickens/files/thenightwatch.pdf">The Night Watch</a>, Mickens [read]<br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -128,8 +128,8 @@ Tuesday, September 10
 <h5><em>
 Programming Languages
 </em></h5>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/LISP.pdf">Recursive Functions of Symbolic Expressions and Their Computation by Machine</a>, McCarthy<br/>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/Algol60-Dijkstra-MR35.PDF">Algol-60 Translation</a>, Dijsktra<br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/LISP.pdf">Recursive Functions of Symbolic Expressions and Their Computation by Machine</a>, McCarthy <font color="red">[review]</font><br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/Algol60-Dijkstra-MR35.PDF">Algol-60 Translation</a>, Dijsktra [read]<br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -147,7 +147,7 @@ Tuesday, September 17
 <h5><em>
 Runtime Systems
 </em></h5>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/GC-Uncooperative.pdf">Garbage Collection in an Uncooperative Environment</a>, Boehm and Weiser<br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/GC-Uncooperative.pdf">Garbage Collection in an Uncooperative Environment</a>, Boehm and Weiser <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
