--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ Programming Languages
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/LISP.pdf">Recursive Functions of Symbolic Expressions and Their Computation by Machine</a>, McCarthy <font color="red">[review]</font><br/>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/Algol60-Dijkstra-MR35.PDF">Algol-60 Translation</a>, Dijsktra [read]<br/>
+<a href="https://homepages.cwi.nl/~storm/teaching/reader/Dijkstra68.pdf">Go To Statement Considered Harmful</a>, Dijkstra [read]<br/>
 </div>
 </div>
 <div class="card mb-12">
