Added architecture readings.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ Tuesday, September 24
 <h5><em>
 Computer Architecture
 </em></h5>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/Architecture-of-the-IBM-System-360.pdf">Architecture of the IBM System/360</a>, Amdahl et al. <font color="red">[review]</font><br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/liptay68.pdf">Structural aspects of the System/360 Model 85: The cache</a>, Liptay [read]<br/>
 </div>
 </div>
 <div class="card mb-12">
