--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Tuesday, September 10
 Programming Languages
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/LISP.pdf">Recursive Functions of Symbolic Expressions and Their Computation by Machine</a>, McCarthy <font color="red">[review]</font><br/>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/Algol60-Dijkstra-MR35.PDF">Algol-60 Translation</a>, Dijsktra [read]<br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/Algol60-Dijkstra-MR35.PDF">Algol-60 Translation</a>, Dijsktra <font color="red">[review]</font><br/>
 <a href="https://homepages.cwi.nl/~storm/teaching/reader/Dijkstra68.pdf">Go To Statement Considered Harmful</a>, Dijkstra [read]<br/>
 </div>
 </div>
@@ -227,6 +227,11 @@ Wednesday, October 16
  &mdash; Midterm
 </font>
 </h4></div>
+<div class="card-body">
+<h5><em>
+ILC S140, 7:00pm-9:00pm
+</em></h5>
+</div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 Thursday, October 17
@@ -354,6 +359,11 @@ Friday, December 13
  &mdash; Final
 </font>
 </h4></div>
+<div class="card-body">
+<h5><em>
+ILC S140, 1:00pm-3:00pm
+</em></h5>
+</div>
 <div class="card mb-12">
 </div>
 </div>
