--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@ Thursday, September 26
 <h5><em>
 Multicore And Parallelism
 </em></h5>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/moorespaper.pdf">Cramming More Components onto Integrated Circuits</a>, Moore <font color="red">[review]</font><br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Conc/Amdahl-04785615.pdf">Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities</a>, Amdahl <font color="red">[review]</font><br/>
+<a href="http://www.cs.wisc.edu/multifacet/papers/ieeecomputer08_amdahl_multicore.pdf">Amdahl’s Law in the Multicore Era</a>, review <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -188,6 +191,9 @@ Tuesday, October 01
 <h5><em>
 Hardware/Software Interface
 </em></h5>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/RISC-patterson.pdf">The Case for the Reduced Instruction Set Computer</a>, Patterson & Ditzel <font color="red">[review]</font><br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/RISC-clark.pdf">Comments on the Case for RISC</a>, Clark & Strecker <font color="red">[review]</font><br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/p272-jouppi.pdf">Available Instruction-Level Parallelism for Superscalar and Superpipelined Machines</a>, review <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -198,6 +204,7 @@ Thursday, October 03
 <h5><em>
 Concurrency
 </em></h5>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Conc/Mesa.pdf">Experience with Processes and Monitors in Mesa</a>, Lampson & Redell  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -208,6 +215,7 @@ Tuesday, October 08
 <h5><em>
 Os Design And Internals
 </em></h5>
+<a href="">The Evolution of the UNIX Time-Sharing System</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -218,6 +226,7 @@ Thursday, October 10
 <h5><em>
 Networked Systems Principles
 </em></h5>
+<a href="">Hints for Computer System Design</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -238,8 +247,10 @@ Thursday, October 17
 </h4></div>
 <div class="card-body">
 <h5><em>
-Queuing Systems
+Security
 </em></h5>
+<a href="">A Note on the Confinement Problem</a>,  <font color="red">[review]</font><br/>
+<a href="">SPECTRE/Meltdown</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -248,8 +259,9 @@ Tuesday, October 29
 </h4></div>
 <div class="card-body">
 <h5><em>
-Security
+Cryptography
 </em></h5>
+<a href="">A Method for Obtaining Digital Signatures and Public Key Cryptosystems</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -258,23 +270,15 @@ Thursday, October 31
 </h4></div>
 <div class="card-body">
 <h5><em>
-Privacy & Security
+Fault-Tolerance (Hardware)
 </em></h5>
+<a href="">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>,  <font color="red">[review]</font><br/>
+<a href="">Why Do Computers Stop and What Can Be Done About It?</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 Tuesday, November 05
-</h4></div>
-<div class="card-body">
-<h5><em>
-Fault-Tolerance (Hardware)
-</em></h5>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, November 07
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -284,27 +288,30 @@ Fault-Tolerance (Software)
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, November 12
+Thursday, November 07
 </h4></div>
 <div class="card-body">
 <h5><em>
 Performance Analysis
 </em></h5>
+<a href="">Coz: Finding Code that Counts with Causal Profiling</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, November 14
+Tuesday, November 12
 </h4></div>
 <div class="card-body">
 <h5><em>
 Distributed Systems
 </em></h5>
+<a href="">Bitcoin: A Peer-to-Peer Electronic Cash System</a>,  <font color="red">[review]</font><br/>
+<a href="">In Search of an Understandable Consensus Algorithm</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, November 19
+Thursday, November 14
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -314,7 +321,7 @@ Databases
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, November 21
+Tuesday, November 19
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -324,17 +331,19 @@ Distributed & Concurrent Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, December 03
+Thursday, November 21
 </h4></div>
 <div class="card-body">
 <h5><em>
 Static & Dynamic Analysis
 </em></h5>
+<a href="">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
+<a href="">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, December 05
+Tuesday, December 03
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -344,11 +353,23 @@ Modern Programming Languages
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, December 10
+Thursday, December 05
 </h4></div>
 <div class="card-body">
 <h5><em>
 Testing
+</em></h5>
+<a href="">An empirical study of the reliability of UNIX utilities</a>,  <font color="red">[review]</font><br/>
+<a href="">DART: Directed Automated Random Testing</a>,  <font color="red">[review]</font><br/>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Tuesday, December 10
+</h4></div>
+<div class="card-body">
+<h5><em>
+Tbd
 </em></h5>
 </div>
 </div>
