--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		      <li><b>Discussion Points:</b> Include at least two discussion points to bring up in class.</li>
 		    </ul>
 		    <p>You will be expected to scribe at least one lecture&#8217;s notes. <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/example-scribe-notes.tex">Here is an example</a> to use as a template (in LaTeX).</p>
+		    <p>TA: <a href="aabhinav@cs.umass.edu">Abhinav Jangda</a> - W 4-5pm, CS207</p>
 		  </div>
 		</div>
 
