--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Multicore And Parallelism
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/moorespaper.pdf">Cramming More Components onto Integrated Circuits</a>, Moore <font color="red">[review]</font><br/>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Conc/Amdahl-04785615.pdf">Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities</a>, Amdahl <font color="red">[review]</font><br/>
-<a href="http://www.cs.wisc.edu/multifacet/papers/ieeecomputer08_amdahl_multicore.pdf">Amdahl’s Law in the Multicore Era</a>, review <font color="red">[review]</font><br/>
+<a href="http://www.cs.wisc.edu/multifacet/papers/ieeecomputer08_amdahl_multicore.pdf">Amdahl’s Law in the Multicore Era</a>, Hill <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -195,7 +195,7 @@ Hardware/Software Interface
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/RISC-patterson.pdf">The Case for the Reduced Instruction Set Computer</a>, Patterson & Ditzel <font color="red">[review]</font><br/>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/RISC-clark.pdf">Comments on the Case for RISC</a>, Clark & Strecker <font color="red">[review]</font><br/>
-<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/p272-jouppi.pdf">Available Instruction-Level Parallelism for Superscalar and Superpipelined Machines</a>, review <font color="red">[review]</font><br/>
+<a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Arch/p272-jouppi.pdf">Available Instruction-Level Parallelism for Superscalar and Superpipelined Machines</a>, Jouppi <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -217,7 +217,7 @@ Tuesday, October 08
 <h5><em>
 Os Design And Internals
 </em></h5>
-<a href="">The Evolution of the UNIX Time-Sharing System</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/unix.pdf">The Evolution of the UNIX Time-Sharing System</a>, Ritchie & Thompson <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -228,7 +228,7 @@ Thursday, October 10
 <h5><em>
 Networked Systems Principles
 </em></h5>
-<a href="">Hints for Computer System Design</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/hints.pdf">Hints for Computer System Design</a>, Lampson <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -251,8 +251,8 @@ Thursday, October 17
 <h5><em>
 Security
 </em></h5>
-<a href="">A Note on the Confinement Problem</a>,  <font color="red">[review]</font><br/>
-<a href="">SPECTRE/Meltdown</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/lampson73.pdf">A Note on the Confinement Problem</a>, Lampson <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/spectre.pdf">Spectre Attacks: Exploiting Speculative Execution</a>, Many People <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
