--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Tuesday, October 29
 <h5><em>
 Cryptography
 </em></h5>
-<a href="">A Method for Obtaining Digital Signatures and Public Key Cryptosystems</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/Rsapaper.pdf">A Method for Obtaining Digital Signatures and Public Key Cryptosystems</a>, RSA <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -288,8 +288,8 @@ Thursday, October 31
 <h5><em>
 Fault-Tolerance (Hardware)
 </em></h5>
-<a href="">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>,  <font color="red">[review]</font><br/>
-<a href="">Why Do Computers Stop and What Can Be Done About It?</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/RAID.pdf">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>, Patterson, Gibson & Katz <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gray-85.pdf">Why Do Computers Stop and What Can Be Done About It?</a>, Gray <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
