--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@ Tuesday, September 17
 Runtime Systems
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/PL/GC-Uncooperative.pdf">Garbage Collection in an Uncooperative Environment</a>, Boehm and Weiser <font color="red">[review]</font><br/>
+<a href="">Quantifying the Performance of Garbage Collection vs. Explicit Memory Management</a>, Hertz & Berger <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -300,6 +301,9 @@ Tuesday, November 05
 <h5><em>
 Fault-Tolerance (Software)
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/rinard.pdf">Enhancing Server Availability and Security Through
+Failure-Oblivious Computing</a>, Rinard et al. <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/fp014-berger.pdf">DieHard: Probabilistic Memory Safety for Unsafe Languages</a>, Berger and Zorn <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -310,7 +314,8 @@ Thursday, November 07
 <h5><em>
 Performance Analysis
 </em></h5>
-<a href="">Coz: Finding Code that Counts with Causal Profiling</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gprof.pdf">GProf: A Call-Graph Execution Profiler</a>, Graham et al. <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coz.pdf">Coz: Finding Code that Counts with Causal Profiling</a>, Curtsinger & Berger <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
