--- a/index.html
+++ b/index.html
@@ -332,7 +332,14 @@ Distributed Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
 Thursday, November 14
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Tuesday, November 19
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -342,7 +349,7 @@ Databases
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, November 19
+Thursday, November 21
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -352,7 +359,7 @@ Distributed & Concurrent Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, November 21
+Tuesday, December 03
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -364,7 +371,7 @@ Static & Dynamic Analysis
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, December 03
+Thursday, December 05
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -374,7 +381,7 @@ Modern Programming Languages
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, December 05
+Tuesday, December 10
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -382,16 +389,6 @@ Testing
 </em></h5>
 <a href="">An empirical study of the reliability of UNIX utilities</a>,  <font color="red">[review]</font><br/>
 <a href="">DART: Directed Automated Random Testing</a>,  <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, December 10
-</h4></div>
-<div class="card-body">
-<h5><em>
-Tbd
-</em></h5>
 </div>
 </div>
 <div class="card mb-12">
