--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@ Tuesday, November 12
 </h4></div>
 <div class="card-body">
 <h5><em>
-Distributed Systems
+Static & Dynamic Analysis
 </em></h5>
-<a href="">Bitcoin: A Peer-to-Peer Electronic Cash System</a>,  <font color="red">[review]</font><br/>
-<a href="">In Search of an Understandable Consensus Algorithm</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coverity.pdf">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/valgrind.pdf">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>, Nethercote & Seward <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -342,8 +342,10 @@ Tuesday, November 19
 </h4></div>
 <div class="card-body">
 <h5><em>
-Databases
+Testing
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/fuzz.pdf">An empirical study of the reliability of UNIX utilities</a>, Miller et al. <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/dart.pdf">DART: Directed Automated Random Testing</a>, Goderfroid et al. <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -362,10 +364,10 @@ Tuesday, December 03
 </h4></div>
 <div class="card-body">
 <h5><em>
-Static & Dynamic Analysis
+Distributed Systems
 </em></h5>
-<a href="">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
-<a href="">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>,  <font color="red">[review]</font><br/>
+<a href="">Bitcoin: A Peer-to-Peer Electronic Cash System</a>,  <font color="red">[review]</font><br/>
+<a href="">In Search of an Understandable Consensus Algorithm</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -374,7 +376,7 @@ Thursday, December 05
 </h4></div>
 <div class="card-body">
 <h5><em>
-Modern Programming Languages
+Databases
 </em></h5>
 </div>
 </div>
@@ -384,10 +386,8 @@ Tuesday, December 10
 </h4></div>
 <div class="card-body">
 <h5><em>
-Testing
+Tbd
 </em></h5>
-<a href="">An empirical study of the reliability of UNIX utilities</a>,  <font color="red">[review]</font><br/>
-<a href="">DART: Directed Automated Random Testing</a>,  <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
