--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@ Thursday, October 24
 </h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Monday, October 28
+ &mdash; <a href="https://docs.google.com/document/d/1ryGR0CU6r39Uv6s062ftf15Jy8yndlrAQoia86rypDk/edit?usp=sharing">Smash, A Compacting Memory Allocator</a>
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 Tuesday, October 29
 </h4></div>
 <div class="card-body">
@@ -354,8 +361,9 @@ Thursday, November 21
 </h4></div>
 <div class="card-body">
 <h5><em>
-Distributed & Concurrent Systems
+Distributed Systems
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/bitcoin.pdf">Bitcoin: A Peer-to-Peer Electronic Cash System</a>, Satoshi Nakamoto <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -366,8 +374,7 @@ Tuesday, December 03
 <h5><em>
 Distributed Systems
 </em></h5>
-<a href="">Bitcoin: A Peer-to-Peer Electronic Cash System</a>,  <font color="red">[review]</font><br/>
-<a href="">In Search of an Understandable Consensus Algorithm</a>,  <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/raft.pdf">In Search of an Understandable Consensus Algorithm</a>, Ongaro and Ousterhout <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -380,6 +387,13 @@ Databases
 </em></h5>
 </div>
 </div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Friday, December 06
+ &mdash; <a href="https://docs.google.com/document/d/1-bqe5SRXHi19vII_plXKIzp3urI-SgJLGQiQT1Is8Bo/edit?usp=sharing">SnakeProf, A Space and Time Profiler for Python</a>
+</font>
+</h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 Tuesday, December 10
@@ -401,21 +415,6 @@ Friday, December 13
 <h5><em>
 ILC S140, 1:00pm-3:00pm
 </em></h5>
-</div>
-<div class="card mb-12">
-</div>
-</div>
-<div class="card mb-12">
-</div>
-</div>
-<div class="card mb-12">
-</div>
-</div>
-<div class="card mb-12">
-</div>
-</div>
-<div class="card mb-12">
-</div>
 </div>
 			</td>
 		      </tr>
